# gokart-sensor

./: .gitignore  .gitmodules  Dockerfile  Plate left side V3.dwg  Plate right side V2.dwg  README.md  backup.txi  check-status.sh  docker-compose.test.yml  docker-compose.yml  exit_fail  exit_success  requirements.txt  ssh_key  ssh_key.pub  structure.txt
01_calib_files/OAK-D_Mono/: calib_oak.txt
01_calib_files/Velodyne_OAK-D/: calib_velodyne_oak.txt
LargeConeSelector/: ChangeClassNumber.py  README.md  TrainingValidationTestSplit.py  main.py
Localization/data_augment/: CMakeLists.txt  package.xml
Localization/ekf_gnss/: package.xml  setup.cfg  setup.py
Localization/gnss_to_local/: setup.cfg  setup.py
Localization/ros2_python_pkg/: package.xml  setup.cfg  setup.py
Object_detection/: README.md
Object_detection/yolov8_pkg/: package.xml  setup.cfg  setup.py
Planning/: README.md
Planning/gap_follow/gap_follow/: package.xml  setup.cfg  setup.py
Planning/gap_follow/gap_follow/config/: gap_follow.yaml
Planning/gap_follow/gap_follow/gap_follow/: gap_follow_node.py
Planning/gap_follow/gap_follow/launch/: gap_follow_cam_node.launch.py  gap_follow_node.launch.py
Planning/pure_pursuit/: README.md  package.xml  setup.py
Planning/pure_pursuit/config/: config.yaml  map.yaml  wp.csv
Planning/pure_pursuit/launch/: purepursuit.launch.py  python_node.launch.py  wp_collection.launch.py  wp_record.launch.py
Planning/pure_pursuit/pure_pursuit/: pure_pursuit_planner.py  purepursuit_node.py  python_node.py  visualize_node.py  waypoint_record.py  wp_record_node.py
Sensor_Drivers/: README.md
Sensor_Drivers/vella-go-2022.2.0-foxy-amd64/: ros-foxy-velodyne-lidar-driver_2.4.0-22.05.11.1422_focal_amd64.deb  velodyne-lidar-driver_2.4.0-22.05.11.1422_focal_amd64.deb
Sensor_drivers/ros2_uart_serial/: README.md
Sensor_drivers/ros2_velodyne_driver_debs/: README.txt
Sensor_drivers/ros_imu_bno055/: package.xml  setup.cfg  setup.py
Sensor_drivers/ros_imu_bno055/launch/: imu_calibration_launch.py  imu_launch.py  view_imu_launch.py
Sensor_drivers/ros_imu_bno055/ros_imu_bno055/: NDOF_calibration  imu_calibration.py  imu_ros.py
archive/LiDAR_labeling_own_version/: CMakeLists.txt
archive/LiDAR_labeling_own_version/scripts/: lidar_labelling.py
archive/PNP_CPP_try/PNP/: CMakeLists.txt  package.xml
archive/PNP_CPP_try/PNP/src/: pnp.cpp
cam_to_lidar/: package.xml  setup.cfg  setup.py
cam_to_lidar/cam_to_lidar/: cam_to_lidar_node.py
catkin_PCL2Velodyne/src/pcl2velodyne/: CMakeLists.txt  package.xml
catkin_PCL2Velodyne/src/pcl2velodyne/src/: main.py
catkin_extra/src/: ouster_example
catkin_extra/src/gnss_driver/: CMakeLists.txt  GPSdata.txt  gnss_node.py  package.xml
catkin_extra/src/gnss_driver/lat_long to XY/: gnss_to_xy.cpp
catkin_extra/src/gnss_driver/msg/: lat_long_heading.msg
catkin_ws/src/camera_preprocessing/: CMakeLists.txt  FindOpenCV.cmake  main.cpp  package.xml
catkin_ws/src/lidar_dev/: CMakeLists.txt  package.xml
catkin_ws/src/lidar_dev/launch/: cluster.launch  cluster_params.yaml  cluster_pipeline.launch
catkin_ws/src/lidar_dev/src/: boxcrop.cpp  cluster.cpp
catkin_ws_LiDAR_labelling/src/LiDAR_labelling/: CMakeLists.txt  package.xml
catkin_ws_LiDAR_labelling/src/LiDAR_labelling/scripts/: lidar_labelling.py
catkin_ws_LiDAR_labelling/src/LiDAR_labelling/scripts/support_programs/: bin2npy.py  json2txt.py
catkin_ws_PNP/src/pnp/: CMakeLists.txt  package.xml
catkin_ws_PNP/src/pnp/scripts/: pnp.py
catkin_ws_camera_preprocessing/src/camera_preprocessing/: CMakeLists.txt  package.xml
catkin_ws_camera_preprocessing/src/camera_preprocessing/src/: camera_preprocessing.py
catkin_ws_evaluation/src/evaluation_6/: CMakeLists.txt  package.xml
catkin_ws_evaluation/src/evaluation_6/src/: evaluation_6.py
catkin_ws_evaluation/src/evaluation_eval/: CMakeLists.txt  package.xml
catkin_ws_evaluation/src/evaluation_eval/src/: evaluation_eval.py
catkin_ws_imuBno055/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws_licafusion/src/licafusion_viz/: CMakeLists.txt  package.xml
catkin_ws_licafusion/src/licafusion_viz/src/: licafusion_viz.py
catkin_ws_pcl_preprocessing/src/pcl_preprocessing/: CMakeLists.txt  package.xml
catkin_ws_pcl_preprocessing/src/pcl_preprocessing/src/: pcl_preprocessing.cpp
catkin_ws_pub_and_sub/src/ros_cpp_pas/: CMakeLists.txt  package.xml
catkin_ws_pub_and_sub/src/ros_cpp_pas/src/: ros_cpp_pas.cpp
catkin_ws_rosbag2npy/src/rosbag2npy/: CMakeLists.txt  package.xml
catkin_ws_rosbag2npy/src/rosbag2npy/scripts/: rosbag2npy.py
configs/: global_config.yaml  gnss_to_utm.py  gnss_waypoints_collection.yaml  gnss_waypoints_purepursuit.yaml  ouster_2d_gap_follow.yaml  rviz.rviz
configs/pennovation/: NDOF_calibration  (+13 more)
configs/pennovation (copy)/: gnss_waypoints_purepursuit.yaml  map_ori.csv  wp.csv
data_aug_ros2/: CMakeLists.txt  package.xml
data_aug_ros2/src/: gnss_filter.cpp  imu_listener.cpp  lidar_filter.cpp  tpub.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
kart_interface/: package.xml  setup.cfg  setup.py
log/: latest_build
pics/: .bashrc
pure_pursuit/: CMakeLists.txt
ros2_GNSS/src/gnss_driver/: CMakeLists.txt  package.xml
ros2_GNSS/src/gnss_driver/src/: gnss_node.py
ros2_UART_Commun/src/ros2_uart_pub/: CMakeLists.txt  package.xml
ros2_UART_Commun/src/ros2_uart_pub/src/: main.cpp
ros2_subandpub/src/ros2_sub_and_pub/: CMakeLists.txt  package.xml
ros2_subandpub/src/ros2_sub_and_pub/src/: main.cpp
ros2_time_sync/src/time_sync/: CMakeLists.txt  package.xml
ros2_ws_imu_driver_sensor_msgs/src/ros2_imu_driver/: package.xml  setup.cfg  setup.py
ros2_ws_imu_driver_sensor_msgs/src/ros2_imu_driver/ros2_imu_driver/: ros2_imu_driver.py
ros2_ws_yolov8/src/ros2_yolov8/: package.xml  setup.cfg  setup.py
ros2_ws_yolov8/src/ros2_yolov8/ros2_yolov8/: ros2_yolov8.py
scripts/: gerenate_yaml.py  interp_wp.py  visualize_centerline.py  visualize_map.py  visualize_optim_raceline.py
sub_status/: CMakeLists.txt  package.xml
sub_status/src/: publish.cpp  subscribe.cpp
(+1279 files in other folders)
