<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pure_pursuit</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zhijunz@seas.upenn.edu">zzjun</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>gnss_to_local</exec_depend>
  <exec_depend>ekf_gnss</exec_depend>
  <exec_depend>data_aug_ros2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
