<?xml version="1.0"?>
<package format="2">
  <name>ros_imu_bno055</name>
  <version>0.0.0</version>
  <description>The ros_imu_bno055 package</description>

  <maintainer email="roboticarts1@gmail.com">Robert Vasquez Zavaleta</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ros_imu_bno055</url>

  <author email="roboticarts1@gmail.com">Robert Vasquez Zavaleta</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
