<?xml version="1.0"?>
<package format="2">
  <name>pnp</name>
  <version>0.0.0</version>
  <description>The ros C++ publisher and subscriber package</description>

  <maintainer email="felix.jahncke@tum.de">ros</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>


  <export>

  </export>
</package>
