<?xml version="1.0"?>
<package format="2">
  <name>ros_cpp_pas</name>
  <version>0.0.0</version>
  <description>The ros C++ publisher and subscriber package</description>

  <maintainer email="felix.jahncke@tum.de">ros</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
