<?xml version="1.0"?>
<package format="2">
  <name>rosbag2npy</name>
  <version>0.1.0</version>
  <description>Python subscriber</description>

  <maintainer email="felix.jahncke@tum.de">Felix Jahncke</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ros_numpy</build_depend>


  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ros_numpy</exec_depend>

</package>
