<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_time_sync</name>
  <version>1.0.0</version>
  <description>This package implements the G2O backend for the UPenn Autonomous GoKart</description>
  <maintainer email="felix.jahncke@tum.de">felix</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

<depend>rclcpp</depend>
<depend>std_msgs</depend>
<depend>g2o</depend>
<depend>message_filters</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
