<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_imu_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="felix.jahncke@tum.de">felix</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>IMU_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
